Correction du titre de la bannière en version mobile

--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -63,7 +63,7 @@
 
 @media (max-width: 445px) {
     .banner p {
-        padding-right: 70px;
+        width: 280px;
     }
 }
 
